--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-typeorm",
-  "version": "0.24.4",
+  "version": "0.25.0",
   "description": "Typeorm adapter for @nestjs-query/core",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -18,12 +18,12 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.24.4",
+    "@nestjs-query/core": "0.25.0",
+    "camel-case": "^4.1.2",
     "lodash.filter": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "tslib": "^2.1.0",
-    "uuid": "^8.3.2",
-    "camel-case": "^4.1.2"
+    "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
