--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-typegoose",
-  "version": "0.24.4",
+  "version": "0.25.0",
   "description": "Typegoose adapter for @nestjs-query/core",
   "author": "john mcinall<johnmcinall@gmail.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -18,11 +18,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.24.4",
+    "@nestjs-query/core": "0.25.0",
+    "camel-case": "^4.1.2",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.merge": "^4.6.2",
-    "tslib": "^2.1.0",
-    "camel-case": "^4.1.2"
+    "tslib": "^2.1.0"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
