--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-tsdoc": "0.2.14",
     "husky": "6.0.0",
     "jest": "26.6.3",
+    "jest-snapshot-serializer-raw": "1.2.0",
     "jest-extended": "0.11.5",
     "lerna": "4.0.0",
     "prettier": "2.3.0",
