feat(query-graphql): authorizer for websocket in resolvers

--- a/packages/query-graphql/tsconfig.json
+++ b/packages/query-graphql/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "."
+    "rootDir": ".",
+    "lib": ["es2019"]
   },
   "include": [
     "./src",
