--- a/examples/package.json
+++ b/examples/package.json
@@ -18,16 +18,17 @@
     "@nestjs-query/query-sequelize": "0.27.0",
     "@nestjs-query/query-typegoose": "0.27.0",
     "@nestjs-query/query-typeorm": "0.27.0",
-    "@nestjs/common": "7.6.18",
-    "@nestjs/core": "7.6.18",
-    "@nestjs/graphql": "7.11.0",
+    "@nestjs/common": "8.0.4",
+    "@nestjs/core": "8.0.4",
+    "@nestjs/graphql": "8.0.2",
     "@nestjs/jwt": "8.0.0",
-    "@nestjs/mongoose": "7.2.4",
+    "@nestjs/mongoose": "8.0.0",
     "@nestjs/passport": "8.0.0",
-    "@nestjs/platform-express": "7.6.18",
-    "@nestjs/sequelize": "0.2.0",
-    "@nestjs/typeorm": "7.1.5",
+    "@nestjs/platform-express": "8.0.4",
+    "@nestjs/sequelize": "8.0.0",
+    "@nestjs/typeorm": "8.0.1",
     "@typegoose/typegoose": "8.0.0-beta.7",
+    "@apollo/federation": "0.26.0",
     "apollo-server-express": "2.25.2",
     "apollo-server-plugin-base": "0.13.0",
     "class-validator": "0.13.1",
@@ -49,9 +50,9 @@
     "typeorm-seeding": "1.6.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "7.6.0",
+    "@nestjs/cli": "8.0.2",
     "@nestjs/schematics": "8.0.2",
-    "@nestjs/testing": "7.6.18",
+    "@nestjs/testing": "8.0.4",
     "@types/express": "4.17.13",
     "@types/jest": "26.0.24",
     "@types/node": "14.17.5",
