--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -47,20 +47,23 @@
     "upper-case-first": "^2.0.1"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^7.0.0",
+    "@nestjs/common": "^8.0.4",
+    "@nestjs/core": "^8.0.4",
+    "@nestjs/graphql": "^8.0.0",
+    "@apollo/gateway": "^0.33.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
     "class-validator": "^0.13.0",
     "dataloader": "^2.0.0",
     "graphql": "^15.0.0",
-    "graphql-subscriptions": "^1.1.0"
+    "graphql-subscriptions": "^1.1.0",
+    "ts-morph": "^11.0.0"
   },
   "devDependencies": {
-    "@nestjs/common": "7.6.18",
-    "@nestjs/core": "7.6.18",
-    "@nestjs/graphql": "7.11.0",
-    "@nestjs/testing": "7.6.18",
+    "@apollo/gateway": "0.33.0",
+    "@nestjs/common": "8.0.4",
+    "@nestjs/core": "8.0.4",
+    "@nestjs/graphql": "8.0.2",
+    "@nestjs/testing": "8.0.4",
     "@types/graphql": "14.5.0",
     "@types/graphql-fields": "1.3.4",
     "@types/lodash.omit": "4.5.6",
@@ -72,6 +75,7 @@
     "graphql": "15.5.1",
     "graphql-subscriptions": "1.2.1",
     "ts-mockito": "2.6.1",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "ts-morph": "11.0.3"
   }
 }
