--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-graphql",
-  "version": "0.27.0",
+  "version": "0.28.0",
   "description": "Nestjs graphql query adapter",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -38,7 +38,7 @@
     "url": "https://github.com/doug-martin/nestjs-query/issues"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.27.0",
+    "@nestjs-query/core": "0.28.0",
     "graphql-fields": "^2.0.3",
     "lodash.omit": "^4.5.0",
     "lower-case-first": "^2.0.1",
@@ -47,10 +47,10 @@
     "upper-case-first": "^2.0.1"
   },
   "peerDependencies": {
+    "@apollo/gateway": "^0.33.0",
     "@nestjs/common": "^8.0.4",
     "@nestjs/core": "^8.0.4",
     "@nestjs/graphql": "^8.0.0",
-    "@apollo/gateway": "^0.33.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
     "class-validator": "^0.13.0",
     "dataloader": "^2.0.0",
@@ -75,7 +75,7 @@
     "graphql": "15.5.1",
     "graphql-subscriptions": "1.2.1",
     "ts-mockito": "2.6.1",
-    "typescript": "4.3.5",
-    "ts-morph": "11.0.3"
+    "ts-morph": "11.0.3",
+    "typescript": "4.3.5"
   }
 }
