feat: Enable authorizers on subscriptions

--- a/packages/query-graphql/tsconfig.json
+++ b/packages/query-graphql/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": ".",
-    "lib": ["es2019"]
+    "rootDir": "."
   },
   "include": [
     "./src",
