--- a/examples/package.json
+++ b/examples/package.json
@@ -29,6 +29,8 @@
     "@nestjs/sequelize": "8.0.0",
     "@nestjs/typeorm": "8.0.1",
     "@typegoose/typegoose": "8.0.0-beta.7",
+    "apollo-server-core": "2.25.2",
+    "apollo-server-types": "0.9.0",
     "apollo-server-express": "2.25.2",
     "apollo-server-plugin-base": "0.13.0",
     "class-validator": "0.13.1",
