--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run lint && npm run jest",
     "test:e2e": "npm run jest:e2e",
     "lint": "eslint --cache --ext=.ts .",
+    "lint:no-cache": "eslint --ext=.ts .",
     "lint:fix": "eslint --fix --ext=.ts .",
     "jest": "jest --runInBand --coverage",
     "jest:e2e": "jest --runInBand --config=./jest.e2e.config.js",
@@ -39,7 +40,7 @@
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-extended": "0.11.5",
     "lerna": "4.0.0",
-    "prettier": "2.3.0",
+    "prettier": "2.3.2",
     "ts-jest": "27.0.4",
     "tsconfig-extends": "1.0.1",
     "typescript": "4.3.5"
