--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nestjs-query/core": "0.28.1",
     "camel-case": "^4.1.2",
+    "is-class": "0.0.9",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.merge": "^4.6.2",
     "tslib": "^2.1.0"
