--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -47,10 +47,10 @@
     "upper-case-first": "^2.0.1"
   },
   "peerDependencies": {
-    "@apollo/gateway": "^0.33.0",
+    "@apollo/gateway": "^0.41.0",
     "@nestjs/common": "^8.0.4",
     "@nestjs/core": "^8.0.4",
-    "@nestjs/graphql": "^8.0.0",
+    "@nestjs/graphql": "^9.0.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
     "class-validator": "^0.13.0",
     "dataloader": "^2.0.0",
@@ -59,20 +59,21 @@
     "ts-morph": "^11.0.0"
   },
   "devDependencies": {
-    "@apollo/gateway": "0.33.0",
+    "@apollo/gateway": "0.41.0",
     "@nestjs/common": "8.0.6",
     "@nestjs/core": "8.0.6",
-    "@nestjs/graphql": "8.0.2",
+    "@nestjs/graphql": "9.0.4",
     "@nestjs/testing": "8.0.6",
     "@types/graphql": "14.5.0",
     "@types/graphql-fields": "1.3.4",
     "@types/lodash.omit": "4.5.6",
     "@types/node-fetch": "2.5.12",
     "@types/pluralize": "0.0.29",
+    "@types/ws": "7.4.7",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "dataloader": "2.0.0",
-    "graphql": "15.5.2",
+    "graphql": "15.5.3",
     "graphql-subscriptions": "1.2.1",
     "ts-mockito": "2.6.1",
     "ts-morph": "11.0.3",
