--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -22,6 +22,7 @@
     "camel-case": "^4.1.2",
     "lodash.filter": "^4.6.0",
     "lodash.omit": "^4.5.0",
+    "lodash.merge": "^4.6.2",
     "tslib": "^2.1.0",
     "uuid": "^8.3.2"
   },
