fix(tests): fix jest-extended typings and eslint problems

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -18,7 +18,8 @@
         "noImplicitReturns": true,
         "pretty": true,
         "strict": true,
-        "noUnusedLocals": true
+        "noUnusedLocals": true,
+        "types": ["jest-extended"]
     },
     "exclude": ["node_modules"]
 }
