--- a/examples/package.json
+++ b/examples/package.json
@@ -28,7 +28,7 @@
     "@nestjs/platform-express": "8.0.10",
     "@nestjs/sequelize": "8.0.0",
     "@nestjs/typeorm": "8.0.2",
-    "@typegoose/typegoose": "8.3.0",
+    "@typegoose/typegoose": "8.0.0-beta.7",
     "apollo-server-core": "3.3.0",
     "apollo-server-express": "3.3.0",
     "apollo-server-plugin-base": "3.2.0",
@@ -37,7 +37,7 @@
     "graphql": "15.6.1",
     "graphql-query-complexity": "0.9.0",
     "graphql-tools": "8.2.0",
-    "mongoose": "5.13.9",
+    "mongoose": "5.12.0",
     "mysql2": "2.3.0",
     "nestjs-typegoose": "7.1.38",
     "passport": "0.5.0",
