--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@nestjs/common": "8.0.10",
     "@nestjs/testing": "8.0.10",
-    "@typegoose/typegoose": "8.3.0",
+    "@typegoose/typegoose": "8.0.0-beta.7",
     "@types/lodash.escaperegexp": "4.1.6",
     "@types/lodash.merge": "4.6.6",
     "class-transformer": "0.4.0",
