--- a/examples/package.json
+++ b/examples/package.json
@@ -33,6 +33,7 @@
     "apollo-server-express": "3.3.0",
     "apollo-server-plugin-base": "3.3.0",
     "apollo-server-types": "3.3.0",
+    "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "graphql": "15.6.1",
     "graphql-query-complexity": "0.9.0",
