--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     ports:
       - "5436:5432"
   mysql:
+    platform: linux/x86_64
     image: "mysql:8"
     volumes:
       - ./init-scripts/mysql:/docker-entrypoint-initdb.d/
