--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -47,7 +47,7 @@
     "upper-case-first": "^2.0.1"
   },
   "peerDependencies": {
-    "@apollo/gateway": "^0.41.0 || ^0.42.0",
+    "@apollo/gateway": "^0.41.0 || ^0.42.0 || ^0.43.0",
     "@nestjs/common": "^8.0.4",
     "@nestjs/core": "^8.0.4",
     "@nestjs/graphql": "^9.0.0",
@@ -59,7 +59,7 @@
     "ts-morph": "^11.0.0 || ^12.0.0"
   },
   "devDependencies": {
-    "@apollo/gateway": "0.42.0",
+    "@apollo/gateway": "0.43.1",
     "@nestjs/common": "8.2.1",
     "@nestjs/core": "8.2.1",
     "@nestjs/graphql": "9.0.6",
