feat(graphql+typeorm): Custom filters   - Force UTC timezone to make some tests (e.g. typeorm-query-service.spec) deterministic   - Allow to define and register custom filters on types and entities (virtual fields as well) at the Typeorm (persistence) layer   - Allow extending filters on the built-in graphql types   - Implement custom filters on custom graphql scalars   - Implement allowedComparisons for extended filters and for custom scalar defined graphql filters   - Implement custom graphql filters on virtual properties   - Documentation   - Tests

--- a/examples/package.json
+++ b/examples/package.json
@@ -49,7 +49,8 @@
     "sequelize": "6.9.0",
     "sequelize-typescript": "2.1.1",
     "typeorm": "0.2.40",
-    "typeorm-seeding": "1.6.1"
+    "typeorm-seeding": "1.6.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "8.1.4",
