--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bootstrap": "lerna bootstrap",
     "clean": "lerna run clean",
     "build": "lerna run build",
+    "build:pkg": "lerna run build --include-dependencies --scope",
     "compile": "lerna run compile",
     "lerna:pub": "lerna publish from-git",
     "lerna:version": "lerna version",
@@ -14,9 +15,9 @@
     "lint": "eslint --cache --ext=.ts .",
     "lint:no-cache": "eslint --ext=.ts .",
     "lint:fix": "eslint --fix --ext=.ts .",
-    "jest": "jest --runInBand --coverage",
-    "jest:e2e": "jest --runInBand --config=./jest.e2e.config.js",
-    "jest:unit": "jest --coverage --config=./jest.unit.config.js",
+    "jest": "TZ=UTC jest --runInBand --coverage",
+    "jest:e2e": "TZ=UTC jest --runInBand --config=./jest.e2e.config.js",
+    "jest:unit": "TZ=UTC jest --coverage --config=./jest.unit.config.js",
     "coverage": "cat ./coverage/lcov.info | coveralls",
     "prepare": "husky install"
   },
