--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -28,6 +28,7 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^8.0.4",
+    "@nestjs/core": "^8.0.0",
     "@nestjs/typeorm": "^8.0.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
     "typeorm": "^0.2.25"
