--- a/examples/package.json
+++ b/examples/package.json
@@ -12,29 +12,32 @@
     "start": "nest start --watch"
   },
   "dependencies": {
-    "@apollo/federation": "0.33.0",
+    "@apollo/federation": "0.33.9",
+    "@apollo/gateway": "0.46.0",
     "@nestjs-query/core": "0.30.0",
     "@nestjs-query/query-graphql": "0.30.0",
     "@nestjs-query/query-typeorm": "0.30.0",
     "@nestjs/common": "8.4.0",
     "@nestjs/core": "8.4.0",
-    "@nestjs/graphql": "9.0.6",
+    "@nestjs/graphql": "10.0.0",
+    "@nestjs/apollo": "10.0.0",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-express": "8.4.0",
     "@nestjs/typeorm": "8.0.2",
-    "apollo-server-core": "3.3.0",
-    "apollo-server-express": "3.3.0",
-    "apollo-server-plugin-base": "3.4.0",
-    "apollo-server-types": "3.4.0",
+    "apollo-server-core": "3.6.7",
+    "apollo-server-express": "3.6.7",
+    "apollo-server-plugin-base": "3.5.2",
+    "apollo-server-types": "3.5.2",
     "class-validator": "0.13.1",
-    "graphql": "15.7.2",
+    "graphql": "15.8.0",
     "graphql-query-complexity": "0.11.0",
     "graphql-tools": "8.2.0",
     "mysql2": "2.3.3",
     "passport": "0.5.2",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
+    "graphql-subscriptions": "1.2.1",
     "pg": "8.7.1",
     "rimraf": "3.0.2",
     "rxjs": "7.4.0",
