--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -47,22 +47,23 @@
     "upper-case-first": "^2.0.1"
   },
   "peerDependencies": {
-    "@apollo/gateway": "^0.41.0 || ^0.42.0",
+    "@apollo/gateway": "0.46.0",
     "@nestjs/common": "^8.0.4",
-    "@nestjs/core": "^8.0.4",
-    "@nestjs/graphql": "^9.0.0",
+    "@nestjs/core": "^8.2.3",
+    "@nestjs/graphql": "10.0.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
     "class-validator": "^0.13.0",
     "dataloader": "^2.0.0",
-    "graphql": "^15.0.0",
+    "graphql": "15.8.0",
+    "graphql-tools": "7.0.5",
     "graphql-subscriptions": "^1.1.0",
-    "ts-morph": "^11.0.0 || ^12.0.0"
+    "ts-morph": "^13.0.2"
   },
   "devDependencies": {
-    "@apollo/gateway": "0.42.0",
+    "@apollo/gateway": "0.46.0",
     "@nestjs/common": "8.4.0",
     "@nestjs/core": "8.4.0",
-    "@nestjs/graphql": "9.0.6",
+    "@nestjs/graphql": "10.0.0",
     "@nestjs/testing": "8.4.0",
     "@types/graphql": "14.5.0",
     "@types/graphql-fields": "1.3.4",
@@ -72,10 +73,10 @@
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "dataloader": "2.0.0",
-    "graphql": "15.7.2",
-    "graphql-subscriptions": "1.2.1",
+    "graphql": "15.8.0",
+    "graphql-tools": "7.0.5",
     "ts-mockito": "2.6.1",
-    "ts-morph": "12.2.0",
+    "ts-morph": "13.0.3",
     "typescript": "4.4.4"
   }
 }
