--- a/package.json
+++ b/package.json
@@ -16,17 +16,12 @@
     "lint:fix": "eslint --fix --ext=.ts .",
     "jest": "jest --runInBand --coverage",
     "jest:e2e": "jest --runInBand --config=./jest.e2e.config.js",
-    "jest:unit": "jest --coverage --config=./jest.unit.config.js",
-    "coverage": "cat ./coverage/lcov.info | coveralls",
-    "prepare": "husky install"
+    "jest:unit": "jest --coverage --config=./jest.unit.config.js"
   },
   "devDependencies": {
-    "@commitlint/cli": "15.0.0",
-    "@commitlint/config-angular": "15.0.0",
     "@types/jest": "27.0.2",
     "@typescript-eslint/eslint-plugin": "5.14.0",
     "@typescript-eslint/parser": "5.14.0",
-    "coveralls": "3.1.1",
     "eslint": "8.11.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "16.1.1",
@@ -36,7 +31,6 @@
     "eslint-plugin-jest": "26.1.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-tsdoc": "0.2.14",
-    "husky": "7.0.4",
     "jest": "27.3.1",
     "jest-snapshot-serializer-raw": "1.2.0",
     "jest-extended": "0.11.5",
