--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,14 @@ jobs:
         db-type: ['postgres', 'mysql']
     steps:
       - uses: actions/checkout@v2
+        with:
+          # We need to fetch all branches and commits so that Nx affected has a base to compare against.
+          fetch-depth: 0
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          # We need to fetch all branches and commits so that Nx affected has a base to compare against.
-          fetch-depth: 0
 
       - run: docker-compose -f ./examples/docker-compose.yml up -d
 
