--- a/packages/query-mongoose/package.json
+++ b/packages/query-mongoose/package.json
@@ -5,10 +5,10 @@
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
   "license": "MIT",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "directories": {
-    "lib": "dist/src",
+    "lib": "src",
     "test": "__tests__"
   },
   "files": [
