--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ptc-org/nestjs-query-core",
-  "version": "0.30.1",
+  "version": "0.30.2",
   "description": "Base query package",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -12,7 +12,7 @@
     "test": "__tests__"
   },
   "files": [
-    "dist/src/**"
+    "src/**"
   ],
   "publishConfig": {
     "access": "public"
