--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ptc-org/nestjs-query-typeorm",
-  "version": "0.32.0",
+  "version": "0.32.1",
   "description": "Typeorm adapter for @nestjs-query/core",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -12,7 +12,7 @@
     "test": "__tests__"
   },
   "files": [
-    "dist/src/**"
+    "src/**"
   ],
   "publishConfig": {
     "access": "public"
