--- a/packages/query-graphql/tsconfig.lib.json
+++ b/packages/query-graphql/tsconfig.lib.json
@@ -6,6 +6,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
+  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts", "**/*.spec-not-working.ts"],
   "include": ["**/*.ts"]
 }
