--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ptc-org/nestjs-query-typeorm",
-  "version": "0.33.0",
+  "version": "1.0.0-alpha.1",
   "description": "Typeorm adapter for @ptc-org/nestjs-query-core",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/tripss/nestjs-query#readme",
