fix(query-typeorm): Fixed `getManyToManyOwnerMeta`
It was not add the select correctly and mapping the raw relations back

--- a/examples/project.json
+++ b/examples/project.json
@@ -19,7 +19,8 @@
         "coverage/examples"
       ],
       "options": {
-        "jestConfig": "examples/jest.config.ts"
+        "jestConfig": "jest.e2e.ts",
+        "runInBand": true
       }
     }
   },
