--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@apollo/federation": "0.33.0",
+    "@docusaurus/core": "2.0.0-beta.13",
+    "@docusaurus/preset-classic": "2.0.0-beta.13",
+    "@mdx-js/react": "^1.6.21",
     "@nestjs/common": "8.4.0",
     "@nestjs/core": "8.4.0",
     "@nestjs/graphql": "9.0.6",
@@ -28,6 +31,7 @@
     "apollo-server-plugin-base": "3.4.0",
     "apollo-server-types": "3.4.0",
     "class-validator": "0.13.1",
+    "clsx": "^1.1.1",
     "graphql": "15.7.2",
     "graphql-query-complexity": "0.11.0",
     "graphql-tools": "8.2.0",
@@ -38,6 +42,9 @@
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
     "pg": "8.7.1",
+    "prism-react-renderer": "^1.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.4.0",
@@ -52,6 +59,7 @@
     "@apollo/gateway": "0.42.0",
     "@commitlint/cli": "15.0.0",
     "@commitlint/config-angular": "15.0.0",
+    "@docusaurus/module-type-aliases": "2.0.0-beta.13",
     "@nestjs/cli": "8.2.2",
     "@nestjs/common": "8.4.0",
     "@nestjs/core": "8.4.0",
@@ -65,6 +73,7 @@
     "@nrwl/linter": "14.1.4",
     "@nrwl/node": "^14.1.4",
     "@nrwl/nx-cloud": "latest",
+    "@nx-plus/docusaurus": "^14.0.0",
     "@typegoose/typegoose": "^9.8.1",
     "@types/express": "4.17.13",
     "@types/graphql": "14.5.0",
