--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@nrwl/js": "14.1.4",
     "@nrwl/linter": "14.1.4",
     "@nrwl/node": "^14.1.4",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^14.0.3",
     "@nx-plus/docusaurus": "^14.0.0",
     "@typegoose/typegoose": "^9.8.1",
     "@types/express": "4.17.13",
