ci: Updated workflows

--- a/.github/actions/setup-step/action.yml
+++ b/.github/actions/setup-step/action.yml
@@ -16,4 +16,5 @@ runs:
 
     - name: Derive appropriate SHAs for base and head for `nx affected` commands
       uses: nrwl/nx-set-shas@v2
-
+      with:
+        main-branch-name: master
