chore: Project changes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,7 +72,8 @@
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-explicit-any": "off",
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": "off",
+        "jest/expect-expect": "off"
       }
     }
   ]
