--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -27,8 +27,8 @@
   "peerDependencies": {
     "@nestjs/common": "^8.0.4",
     "@typegoose/typegoose": "^8.0.0-beta.2",
-    "nestjs-typegoose": "^7.1.38",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "nestjs-typegoose": "^7.1.38"
   },
   "repository": {
     "type": "git",
