chore: Use yarn 3

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,14 @@ typings/
 # Optional npm cache directory
 .npm
 
+# Optional yarn cache directory
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
 # Optional eslint cache
 .eslintcache
 
