--- a/package.json
+++ b/package.json
@@ -126,5 +126,6 @@
     "tsconfig-extends": "1.0.1",
     "tsconfig-paths": "3.11.0",
     "typescript": "4.4.4"
-  }
+  },
+  "packageManager": "yarn@3.2.1"
 }
