chore: Updated some deps

--- a/packages/query-typegoose/project.json
+++ b/packages/query-typegoose/project.json
@@ -25,7 +25,9 @@
         "tsConfig": "packages/query-typegoose/tsconfig.lib.json",
         "packageJson": "packages/query-typegoose/package.json",
         "main": "packages/query-typegoose/src/index.ts",
-        "assets": ["packages/query-typegoose/*.md"]
+        "assets": ["packages/query-typegoose/*.md"],
+        "updateBuildableProjectDepsInPackageJson": true,
+        "buildableProjectDepsInPackageJsonType": "dependencies"
       }
     }
   },
