--- a/examples/.eslintrc.json
+++ b/examples/.eslintrc.json
@@ -11,7 +11,9 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "rules": {}
+      "rules": {
+        "import/no-extraneous-dependencies": "off"
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
