--- a/packages/query-sequelize/package.json
+++ b/packages/query-sequelize/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ptc-org/nestjs-query-sequelize",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "Sequelize adapter for @ptc-org/nestjs-query-core",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/tripss/nestjs-query#readme",
@@ -12,7 +12,7 @@
     "test": "__tests__"
   },
   "files": [
-    "dist/src/**"
+    "src/**"
   ],
   "publishConfig": {
     "access": "public"
