--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "nestjs-query",
-  "private": true,
-  "scripts": {
-    "bootstrap": "lerna bootstrap",
-    "clean": "lerna run clean",
-    "build": "lerna run build",
-    "compile": "lerna run compile",
-    "lerna:pub": "lerna publish from-git",
-    "lerna:version": "lerna version",
-    "release": "npm run build && npm run lerna:version && npm run lerna:pub",
-    "test": "npm run lint && npm run jest",
-    "test:e2e": "npm run jest:e2e",
-    "lint": "eslint --cache --ext=.ts .",
-    "lint:no-cache": "eslint --ext=.ts .",
-    "lint:fix": "eslint --fix --ext=.ts .",
-    "jest": "jest --runInBand --coverage",
-    "jest:e2e": "jest --runInBand --config=./jest.e2e.config.js",
-    "jest:unit": "jest --coverage --config=./jest.unit.config.js",
-    "coverage": "cat ./coverage/lcov.info | coveralls",
-    "prepare": "husky install"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "15.0.0",
-    "@commitlint/config-angular": "15.0.0",
-    "@types/jest": "27.0.2",
-    "@typescript-eslint/eslint-plugin": "5.14.0",
-    "@typescript-eslint/parser": "5.14.0",
-    "coveralls": "3.1.1",
-    "eslint": "8.11.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "16.1.1",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "2.5.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jest": "26.1.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-tsdoc": "0.2.14",
-    "husky": "7.0.4",
-    "jest": "27.3.1",
-    "jest-snapshot-serializer-raw": "1.2.0",
-    "jest-extended": "0.11.5",
-    "lerna": "4.0.0",
-    "prettier": "2.4.1",
-    "ts-jest": "27.0.7",
-    "tsconfig-extends": "1.0.1",
-    "typescript": "4.4.4"
-  }
+	"name": "nestjs-query",
+	"private": true,
+	"scripts": {
+		"bootstrap": "lerna bootstrap",
+		"clean": "lerna run clean",
+		"build": "lerna run build",
+		"compile": "lerna run compile",
+		"lerna:pub": "lerna publish from-git",
+		"lerna:version": "lerna version",
+		"release": "npm run build && npm run lerna:version && npm run lerna:pub",
+		"test": "npm run lint:no-cache && npm run jest",
+		"test:e2e": "npm run jest:e2e",
+		"lint": "eslint --cache --ext=.ts .",
+		"lint:no-cache": "eslint --ext=.ts .",
+		"lint:fix": "eslint --fix --ext=.ts .",
+		"jest": "jest --runInBand --coverage",
+		"jest:e2e": "jest --runInBand --config=./jest.e2e.config.js",
+		"jest:unit": "jest --coverage --config=./jest.unit.config.js",
+		"coverage": "cat ./coverage/lcov.info | coveralls",
+		"prepare": "husky install"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "15.0.0",
+		"@commitlint/config-angular": "15.0.0",
+		"@types/jest": "27.0.2",
+		"@typescript-eslint/eslint-plugin": "5.14.0",
+		"@typescript-eslint/parser": "5.14.0",
+		"coveralls": "3.1.1",
+		"eslint": "8.11.0",
+		"eslint-config-airbnb": "19.0.4",
+		"eslint-config-airbnb-typescript": "16.1.1",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-import-resolver-typescript": "2.5.0",
+		"eslint-plugin-import": "2.25.4",
+		"eslint-plugin-jest": "26.1.1",
+		"eslint-plugin-prettier": "4.0.0",
+		"eslint-plugin-tsdoc": "0.2.14",
+		"husky": "7.0.4",
+		"jest": "27.3.1",
+		"jest-snapshot-serializer-raw": "1.2.0",
+		"jest-extended": "0.11.5",
+		"lerna": "4.0.0",
+		"prettier": "2.4.1",
+		"ts-jest": "27.0.7",
+		"tsconfig-extends": "1.0.1",
+		"typescript": "4.4.4"
+	}
 }
