--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nestjs-query",
+	"name": "@codeshine/nestjs-query",
 	"private": true,
 	"scripts": {
 		"bootstrap": "lerna bootstrap",
@@ -38,10 +38,11 @@
 		"eslint-plugin-tsdoc": "0.2.14",
 		"husky": "7.0.4",
 		"jest": "27.3.1",
-		"jest-snapshot-serializer-raw": "1.2.0",
 		"jest-extended": "0.11.5",
+		"jest-snapshot-serializer-raw": "1.2.0",
 		"lerna": "4.0.0",
 		"prettier": "2.4.1",
+		"rxjs": "^7.5.6",
 		"ts-jest": "27.0.7",
 		"tsconfig-extends": "1.0.1",
 		"typescript": "4.4.4"
