--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -27,15 +27,15 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.4",
-    "@nestjs/typeorm": "^8.0.0",
+    "@nestjs/common": "^9.0.5",
+    "@nestjs/typeorm": "^9.0.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
-    "typeorm": "^0.2.25 || 0.3.7"
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "@nestjs/common": "8.4.0",
-    "@nestjs/testing": "8.4.0",
-    "@nestjs/typeorm": "8.0.2",
+    "@nestjs/common": "9.0.5",
+    "@nestjs/testing": "9.0.5",
+    "@nestjs/typeorm": "9.0.0",
     "@types/lodash.filter": "4.6.6",
     "@types/lodash.omit": "4.5.6",
     "@types/uuid": "8.3.4",
