--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
   "tagVersionPrefix": "v",
   "packages": [
-    "packages/*"
+    "packages/core",
+    "packages/query-typeorm"
   ],
   "command": {
     "version": {
@@ -15,5 +16,5 @@
       "hoist": true
     }
   },
-  "version": "0.30.1"
+  "version": "0.30.2"
 }
