--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codeshine/nestjs-query-core",
-  "version": "0.30.1",
+  "version": "0.30.2",
   "description": "Base query package",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -40,6 +40,7 @@
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4"
   },
   "devDependencies": {
+    "@nestjs/core": "9.0.5",
     "@nestjs/common": "9.0.5",
     "@nestjs/testing": "9.0.5",
     "@types/lodash.merge": "4.6.6",
