--- a/package.json
+++ b/package.json
@@ -124,5 +124,6 @@
     "tsconfig-paths": "3.11.0",
     "typescript": "4.4.4"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.2.1",
+  "version": "3.2.1"
 }
