--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -29,7 +29,7 @@
     "@nestjs/common": "^8.0.4",
     "@nestjs/typeorm": "^8.0.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
-    "typeorm": "^0.2.25"
+    "typeorm": "0.2.45"
   },
   "repository": {
     "type": "git",
