--- a/package.json
+++ b/package.json
@@ -13,54 +13,54 @@
     "test:e2e": "npm run jest:e2e"
   },
   "dependencies": {
-    "@apollo/federation": "0.33.0",
-    "@docusaurus/core": "2.0.0-beta.21",
+    "@apollo/federation": "0.36.1",
+    "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.0-beta.21",
-    "@nestjs/common": "8.4.6",
-    "@nestjs/core": "8.4.6",
+    "@nestjs/common": "8.4.7",
+    "@nestjs/core": "8.4.7",
     "@nestjs/graphql": "9.1.2",
     "@nestjs/jwt": "8.0.1",
     "@nestjs/mongoose": "9.1.0",
-    "@nestjs/passport": "8.2.1",
-    "@nestjs/platform-express": "8.4.6",
-    "@nestjs/sequelize": "8.0.0",
-    "apollo-server-core": "3.8.1",
-    "apollo-server-express": "3.8.1",
-    "apollo-server-plugin-base": "3.6.0",
-    "apollo-server-types": "3.6.0",
+    "@nestjs/passport": "8.2.2",
+    "@nestjs/platform-express": "8.4.7",
+    "@nestjs/sequelize": "8.0.1",
+    "apollo-server-core": "3.10.1",
+    "apollo-server-express": "3.10.1",
+    "apollo-server-plugin-base": "3.6.2",
+    "apollo-server-types": "3.6.2",
     "class-validator": "0.13.2",
-    "clsx": "^1.1.1",
-    "mongoose": "^6.3.5",
+    "clsx": "^1.2.1",
+    "mongoose": "^6.5.2",
     "mysql2": "2.3.3",
     "nestjs-typegoose": "7.1.38",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
     "pg": "8.7.3",
-    "prism-react-renderer": "^1.3.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.5.5",
-    "sequelize": "6.20.1",
+    "rxjs": "7.5.6",
+    "sequelize": "6.21.3",
     "sequelize-typescript": "2.1.3",
     "tslib": "^2.4.0",
     "typeorm": "0.2.45",
     "typeorm-seeding": "1.6.1"
   },
   "devDependencies": {
-    "@actions/core": "^1.8.2",
+    "@actions/core": "^1.9.1",
     "@apollo/gateway": "0.42.3",
-    "@commitlint/cli": "17.0.2",
-    "@commitlint/config-angular": "17.0.0",
-    "@docusaurus/module-type-aliases": "2.0.0-beta.21",
-    "@nestjs/cli": "8.2.6",
-    "@nestjs/common": "8.4.6",
-    "@nestjs/core": "8.4.6",
+    "@commitlint/cli": "17.0.3",
+    "@commitlint/config-angular": "17.0.3",
+    "@docusaurus/module-type-aliases": "2.0.1",
+    "@nestjs/cli": "8.2.8",
+    "@nestjs/common": "8.4.7",
+    "@nestjs/core": "8.4.7",
     "@nestjs/graphql": "9.1.2",
     "@nestjs/schematics": "8.0.11",
-    "@nestjs/testing": "8.4.6",
+    "@nestjs/testing": "8.4.7",
     "@nestjs/typeorm": "8.0.4",
     "@nrwl/eslint-plugin-nx": "14.1.4",
     "@nrwl/jest": "14.1.4",
@@ -68,7 +68,7 @@
     "@nrwl/linter": "14.1.4",
     "@nrwl/node": "^14.1.4",
     "@nrwl/nx-cloud": "^14.0.3",
-    "@nx-plus/docusaurus": "^14.0.0",
+    "@nx-plus/docusaurus": "^14.1.0",
     "@typegoose/typegoose": "^9.8.1",
     "@types/express": "4.17.13",
     "@types/graphql": "14.5.0",
@@ -92,31 +92,31 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "dataloader": "2.1.0",
-    "eslint": "8.16.0",
+    "eslint": "8.21.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "16.2.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-import-resolver-typescript": "2.7.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "26.4.6",
-    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-jest": "26.8.2",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-tsdoc": "0.2.16",
     "graphql": "15.8.0",
     "graphql-query-complexity": "0.11.0",
     "graphql-subscriptions": "1.2.1",
-    "graphql-tools": "8.2.11",
+    "graphql-tools": "8.3.3",
     "husky": "8.0.1",
     "jest": "27.5.1",
     "jest-extended": "2.0.0",
     "jest-snapshot-serializer-raw": "1.2.0",
     "mongodb-memory-server": "6.9.6",
     "nx": "14.1.4",
-    "prettier": "2.6.2",
+    "prettier": "2.7.1",
     "sql-formatter": "^4.0.2",
-    "sqlite3": "^5.0.8",
-    "supertest": "6.2.3",
+    "sqlite3": "^5.0.11",
+    "supertest": "6.2.4",
     "ts-jest": "27.1.5",
-    "ts-loader": "9.3.0",
+    "ts-loader": "9.3.1",
     "ts-mockito": "2.6.1",
     "ts-morph": "12.2.0",
     "ts-node": "9.1.1",
