--- a/packages/query-typegoose/project.json
+++ b/packages/query-typegoose/project.json
@@ -5,14 +5,20 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["packages/query-typegoose/**/*.ts"]
+        "lintFilePatterns": [
+          "packages/query-typegoose/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/packages/query-typegoose"],
+      "outputs": [
+        "coverage/packages/query-typegoose"
+      ],
       "options": {
         "jestConfig": "packages/query-typegoose/jest.config.ts",
         "passWithNoTests": true
@@ -20,13 +26,17 @@
     },
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/packages/query-typegoose",
         "tsConfig": "packages/query-typegoose/tsconfig.lib.json",
         "packageJson": "packages/query-typegoose/package.json",
         "main": "packages/query-typegoose/src/index.ts",
-        "assets": ["packages/query-typegoose/*.md"],
+        "assets": [
+          "packages/query-typegoose/*.md"
+        ],
         "updateBuildableProjectDepsInPackageJson": true,
         "buildableProjectDepsInPackageJsonType": "dependencies"
       }
@@ -39,5 +49,7 @@
     }
   },
   "tags": [],
-  "implicitDependencies": ["core"]
+  "implicitDependencies": [
+    "core"
+  ]
 }
