--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@actions/core": "^1.9.1",
     "@apollo/gateway": "2.0.5",
     "@commitlint/cli": "17.0.3",
-    "@commitlint/config-angular": "17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@docusaurus/module-type-aliases": "2.0.1",
     "@jscutlery/semver": "^2.26.0",
     "@nestjs/apollo": "^10.0.22",
