chore: Updated NX

--- a/packages/query-graphql/project.json
+++ b/packages/query-graphql/project.json
@@ -5,20 +5,14 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/query-graphql/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/query-graphql/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/query-graphql"
-      ],
+      "outputs": ["coverage/packages/query-graphql"],
       "options": {
         "jestConfig": "packages/query-graphql/jest.config.ts",
         "passWithNoTests": true
@@ -26,29 +20,22 @@
     },
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/query-graphql",
         "tsConfig": "packages/query-graphql/tsconfig.lib.json",
         "packageJson": "packages/query-graphql/package.json",
         "main": "packages/query-graphql/src/index.ts",
-        "assets": [
-          "packages/query-graphql/*.md"
-        ],
+        "assets": ["packages/query-graphql/*.md"],
         "updateBuildableProjectDepsInPackageJson": true,
         "buildableProjectDepsInPackageJsonType": "dependencies"
       }
     },
     "version": {
       "executor": "@jscutlery/semver:version",
-      "options": {
-      }
+      "options": {}
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "core"
-  ]
+  "implicitDependencies": ["core"]
 }
