--- a/packages/query-sequelize/project.json
+++ b/packages/query-sequelize/project.json
@@ -5,20 +5,14 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/query-sequelize/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/query-sequelize/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/query-sequelize"
-      ],
+      "outputs": ["coverage/packages/query-sequelize"],
       "options": {
         "jestConfig": "packages/query-sequelize/jest.config.ts",
         "passWithNoTests": true
@@ -26,27 +20,20 @@
     },
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/query-sequelize",
         "tsConfig": "packages/query-sequelize/tsconfig.lib.json",
         "packageJson": "packages/query-sequelize/package.json",
         "main": "packages/query-sequelize/src/index.ts",
-        "assets": [
-          "packages/query-sequelize/*.md"
-        ]
+        "assets": ["packages/query-sequelize/*.md"]
       }
     },
     "version": {
       "executor": "@jscutlery/semver:version",
-      "options": {
-      }
+      "options": {}
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "core"
-  ]
+  "implicitDependencies": ["core"]
 }
