--- a/packages/query-typeorm/project.json
+++ b/packages/query-typeorm/project.json
@@ -5,35 +5,25 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/query-typeorm",
         "tsConfig": "packages/query-typeorm/tsconfig.lib.json",
         "packageJson": "packages/query-typeorm/package.json",
         "main": "packages/query-typeorm/src/index.ts",
-        "assets": [
-          "packages/query-typeorm/*.md"
-        ]
+        "assets": ["packages/query-typeorm/*.md"]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/query-typeorm/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/query-typeorm/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/query-typeorm"
-      ],
+      "outputs": ["coverage/packages/query-typeorm"],
       "options": {
         "jestConfig": "packages/query-typeorm/jest.config.ts",
         "passWithNoTests": true
@@ -41,12 +31,9 @@
     },
     "version": {
       "executor": "@jscutlery/semver:version",
-      "options": {
-      }
+      "options": {}
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "core"
-  ]
+  "implicitDependencies": ["core"]
 }
