--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,7 +30,7 @@
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.4",
+    "@nestjs/common": "^8.0.0 || ^9.0.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4"
   }
 }
