--- a/packages/query-mongoose/package.json
+++ b/packages/query-mongoose/package.json
@@ -24,7 +24,7 @@
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.4",
+    "@nestjs/common": "^8.0.0 || ^9.0.0",
     "@nestjs/mongoose": "^8.0.0 || ^9.0.0",
     "mongoose": "^5.10.0"
   },
