--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -25,7 +25,7 @@
     "tslib": "^2.4.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.4",
+    "@nestjs/common": "^8.0.0 || ^9.0.0",
     "@typegoose/typegoose": "^8.0.0-beta.2",
     "mongoose": "^6.3.3",
     "nestjs-typegoose": "^7.1.38"
