--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -26,10 +26,10 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@nestjs/common": "9.0.11",
-    "@nestjs/typeorm": "9.0.1",
+    "@nestjs/common": "^8.0.0 || ^9.0.0",
+    "@nestjs/typeorm": "^9.0.0",
     "class-transformer": "^0.2.3 || 0.3.1 || 0.4",
-    "typeorm": "0.3.8"
+    "typeorm": "^0.3.8"
   },
   "repository": {
     "type": "git",
