ci: Added missing `GITHUB_TOKEN` to versioning

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,3 +93,5 @@ jobs:
 
       - name: nx workspace:version
         run: yarn nx run workspace:version --prod
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
